test/parser/valid/literals_and_names/int_literals.java
protected class A {
  public A() {}
  protected int x = 42;
}
