test/parser/bad/_custom/extended_ascii_char.java
protected class A {
  public A() {}
  public char b() { return '─'; }
}
